--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
   },
   "keywords": ["document", "converter", "pdf", "docx", "markdown"],
   "author": "whitmore0",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "multer": "^1.4.5",
+    "marked": "^4.3.0",
+    "puppeteer": "^19.11.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
